--- a/main.html
+++ b/main.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<section class="product">
-		<div class="product__photo">
-			<div class="photo-container">
-				<div class="photo-main">
-					<div class="controls">
-						<i class="fa fa-share-alt"></i>
-						<i class="fa fa-heart-o"></i>
-					</div>
-					<img src="https://res.cloudinary.com/john-mantas/image/upload/v1537291846/codepen/delicious-apples/green-apple-with-slice.png"
+  <section class="product">
+    <div class="productPhoto">
+      <div class="photo-container">
+        <div class="photo-main">
+          <div class="controls">
+            <i class="fas fa-share-alt"></i>
+						<i class="far fa-heart"></i>
+          </div>
+          <img src="https://res.cloudinary.com/john-mantas/image/upload/v1537291846/codepen/delicious-apples/green-apple-with-slice.png"
 						alt="green apple slice">
-				</div>
-				<div class="photo-album">
-					<ul>
-						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png"
+        </div>
+        <div class="photo-album">
+          <ul>
+            <li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png"
 								alt="green apple"></li>
 						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303532/codepen/delicious-apples/half-apple.png"
 								alt="half apple"></li>
@@ -33,21 +30,21 @@
 								alt="green apple"></li>
 						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303708/codepen/delicious-apples/apple-top.png"
 								alt="apple top"></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="product__info">
-			<div class="title">
-				<h1>Delicious Apples</h1>
-				<span>CODE: 45999</span>
-			</div>
-			<div class="price">
-				R$ <span>7.93</span>
-			</div>
-			<div class="variant">
-				<h3>SELECT A COLOR</h3>
-				<ul>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="productInfo">
+      <div class="title">
+        <h1>Delicious Apples</h1>
+        <span>CODE:45999</span>
+      </div>
+      <div class="price">
+        R$ <span>7.93</span>
+      </div>
+      <div class="variant">
+        <h3>SELECT A COLOR</h3>
+        <ul>
 					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png"
 							alt="green apple"></li>
 					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png"
@@ -57,12 +54,19 @@
 					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png"
 							alt="red apple"></li>
 				</ul>
-			</div>
-			<div class="description">
-				
-			</div>
-		</div>
-	</section>
+      </div>
+      <div class="description">
+        <h3>BENEFITS</h3>
+        <ul>
+					<li>Apples are nutricious</li>
+					<li>Apples may be good for weight loss</li>
+					<li>Apples may be good for bone health</li>
+					<li>They're linked to a lowest risk of diabetes</li>
+				</ul>
+      </div>
+      <button class="buy--btn">ADD TO CART</button>
+    </div>
+  </section>
 </body>
 
 </html>
